Add setuptools and setuptools-scm as requirements due to no-build-isolation

--- a/dev_environment.yaml
+++ b/dev_environment.yaml
@@ -6,6 +6,8 @@ channels:
   - https://conda.anaconda.org/nvidia
 dependencies:
   # General
+  - setuptools>=64
+  - setuptools-scm>=8
   - python=3.10
   - pip
 
