--- a/.github/workflows/build-conda-pkg.yml
+++ b/.github/workflows/build-conda-pkg.yml
@@ -35,6 +35,17 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Build pkg
+        run: >-
+          docker run
+          --rm
+          --gpus '"device=all"'
+          ${{ steps.meta.outputs.tags }}
+          bash -c
+          "source /opt/conda/etc/profile.d/conda.sh
+          && conda activate
+          && ./conda/build_conda_pkg.sh"
+
       - name: Remove image
         if: ${{ always() }}
         continue-on-error: true
