--- a/Dockerfile.conda
+++ b/Dockerfile.conda
@@ -1,6 +1,6 @@
 # This image has ubuntu 22.0, cuda 11.8, cudnn 8.7, python 3.10, pytorch 2.3.0
 FROM pytorch/pytorch:2.3.0-cuda11.8-cudnn8-devel
-WORKDIR /torchani_sandbox
+WORKDIR /repo
 
 # Set cuda env vars
 ENV CUDA_HOME=/usr/local/cuda/
@@ -14,7 +14,7 @@ ENV LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
 RUN apt update && apt install -y wget git unzip ninja-build
 
 # Copy requirements to build conda pkg, in case it is neded
-COPY conda/build_requirements.txt /torchani_sandbox/conda/build_requirements.txt
+COPY conda/build_requirements.txt /repo/conda/build_requirements.txt
 
 # Install requirements to build conda pkg (first activate conda base env)
 # TODO: can the base env be activated just once?
@@ -24,7 +24,7 @@ RUN \
     && conda install --file conda/build_requirements.txt
 
 # Copy rest of the repo files
-COPY . /torchani_sandbox
+COPY . /repo
 
 # Init repo from scratch, faster than copying .git
 # setuptools-scm needs a Git repo to work properly
