--- a/.github/workflows/unittests-ext.yml
+++ b/.github/workflows/unittests-ext.yml
@@ -14,7 +14,7 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout torchani
+      - name: Checkout repo
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT }}
