--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -1,6 +1,6 @@
 package:
-  name: "{{ environ.get('PACKAGE_NAME') }}"
-  version: "{{ environ.get('BUILD_VERSION') }}"
+  name: torchani
+  version: "{{ environ.get('BUILD_VERSION', '0.0.0') }}"
 
 source:
   path: "{{ environ.get('PACKAGE_ROOT') }}"
