--- a/torchani/csrc/CMakeLists.txt
+++ b/torchani/csrc/CMakeLists.txt
@@ -13,17 +13,6 @@ project(
 
 # Export compilation database into compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(COMMON_CXX_WARNINGS
-    -Wall
-    -Wextra
-    -Wcast-align
-    -Wcast-qual
-    -Wdisabled-optimization
-    -Winit-self
-    -Wmissing-include-dirs
-    -Woverloaded-virtual
-    -Wredundant-decls
-)
 # If we are in a conda env, append the conda prefix so CMake detects the conda
 # packages
 list(APPEND CMAKE_PREFIX_PATH $ENV{CONDA_PREFIX})
@@ -53,9 +42,7 @@ add_library(
     cuaev_cub.cuh
 )
 set_property(TARGET cuaev PROPERTY PREFIX "")
-set_property(TARGET cuaev PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
 target_compile_features(cuaev PRIVATE cxx_std_17)
-target_link_options(cuaev PRIVATE "LINKER:--no-as-needed")
 target_link_libraries(cuaev PRIVATE ${TORCH_LIBRARIES} ${Python_LIBRARIES})
 set(CUAEV_CUB_NAMESPACE_DEFS "CUB_NS_QUALIFIER=::cuaev::cub" "CUB_NS_PREFIX=namespace cuaev {" "CUB_NS_POSTFIX=}")
 target_compile_definitions(
@@ -65,7 +52,11 @@ target_compile_definitions(
             $<$<COMPILE_LANGUAGE:CUDA>:TORCHANI_OPT>
             $<$<COMPILE_LANGUAGE:CUDA>:${CUAEV_CUB_NAMESPACE_DEFS}>
 )
-target_compile_options(cuaev PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-use_fast_math> ${COMMON_CXX_WARNINGS})
+target_compile_options(
+    cuaev
+        PRIVATE
+            $<$<COMPILE_LANGUAGE:CUDA>:-use_fast_math>
+        )
 target_include_directories(cuaev PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${Python_INCLUDE_DIRS})
 
 # Required for MNP only
@@ -76,12 +67,9 @@ add_library(
     mnp.cpp
 )
 set_property(TARGET mnp PROPERTY PREFIX "")
-set_property(TARGET mnp PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
 target_compile_features(mnp PRIVATE cxx_std_17)
-target_link_options(mnp PRIVATE "LINKER:--no-as-needed")
 target_link_libraries(mnp PRIVATE ${TORCH_LIBRARIES} ${Python_LIBRARIES} OpenMP::OpenMP_CXX)
 target_compile_definitions(mnp PRIVATE  ${TORCH_CXX_FLAGS})
-target_compile_options(mnp PRIVATE ${COMMON_CXX_WARNINGS})
 target_include_directories(mnp PRIVATE ${Python_INCLUDE_DIRS})
 
 list(APPEND CMAKE_PREFIX_PATH $ENV{CONDA_PREFIX})
@@ -93,6 +81,7 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set(CMAKE_INSTALL_PREFIX ${TORCHANI_ROOT} CACHE PATH "Install location" FORCE)
 endif()
 
+# Permissions may be overkill, but this is how setuptools installs the extensions
 install(
     TARGETS
         mnp
