--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -3,36 +3,41 @@ package:
   version: "{{ environ.get('BUILD_VERSION', '0.0.0') }}"
 
 source:
-  path: "{{ REPO_ROOT }}"
+  path: "../.."
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+  # Specifying these dependencies is useful to make the environment solve faster
   host:
-    - conda-forge::python={{ PYTHON_VERSION }}
-    - conda-forge::cmake
-    - conda-forge::git
-    - conda-forge::pip
-    - conda-forge::setuptools
-    - conda-forge::setuptools_scm
-    - pytorch::pytorch={{ PYTORCH_VERSION }}
-    - pytorch::pytorch-cuda={{ CUDA_VERSION }}
-    - nvidia::cuda-libraries-dev={{ CUDA_VERSION }}
-    - nvidia::cuda-nvcc={{ CUDA_VERSION }}
-    - nvidia::cuda-cccl={{ CUDA_VERSION }}
+    - conda-forge::python={{ python }}
+    - conda-forge::typing_extensions=4.11
+    - conda-forge::cmake=3.24
+    - conda-forge::git=2.34
+    - conda-forge::pip=24
+    - conda-forge::setuptools=69.5
+    - conda-forge::setuptools_scm=8.1
+    - pytorch::pytorch={{ pytorch }}
+    - pytorch::pytorch-cuda={{ cuda }}
+    - nvidia::cuda-libraries-dev={{ cuda }}
+    - nvidia::cuda-nvcc={{ cuda }}
+    - nvidia::cuda-cccl={{ cuda }}
   run:
-    - conda-forge::python={{ PYTHON_VERSION }}
+    - conda-forge::python={{ python }}
     - conda-forge::typing_extensions>=4.0.0
     - conda-forge::numpy>=1.24
     - conda-forge::h5py
     - conda-forge::tqdm
-    - pytorch::pytorch={{ PYTORCH_VERSION }}
-    - pytorch::pytorch-cuda={{ CUDA_VERSION }}
+    - pytorch::pytorch={{ pytorch }}
+    - pytorch::pytorch-cuda={{ cuda }}
 
 build:
   number: 0
-  string: py{{ PYTHON_VERSION }}_torch{{ PYTORCH_VERSION }}_cuda{{ CUDA_VERSION }}
+  string: py{{ python }}_torch{{ pytorch }}_cuda{{ cuda }}
+  # The following can be used to build with the system's cuda
+  # script_env:
+  # - CUDA_HOME=path_to_cuda
 
 test:
   # These are automatically added to the "run" requirements when testing
