--- a/dev_environment.yaml
+++ b/dev_environment.yaml
@@ -24,6 +24,7 @@ dependencies:
   # metapackage are not enough, we need the *-dev versions with the headers.
   # We also need nvcc-11.8 to use as a compiler
   - nvidia::cuda-libraries-dev=11.8
+  - nvidia::cuda-cccl=11.8
   - nvidia::cuda-nvcc=11.8
 
   # Optional ASE interface, needed for dynamics and for tests/tools/docs:
