--- a/.github/workflows/build-conda-pkg.yml
+++ b/.github/workflows/build-conda-pkg.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile.conda
+          file: conda.Dockerfile
           context: .
           push: false
           tags: ${{ steps.meta.outputs.tags }}
