--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -1,10 +1,21 @@
 package:
   name: sandbox
-  version: "{{ environ.get('BUILD_VERSION', '0.0.0') }}"
+  version: {{ GIT_DESCRIBE_TAG }}.{{ GIT_BUILD_STR }}
 
 source:
   # git_url only captures committed code
   git_url: ../../
+
+build:
+  number: 0
+  string: py{{ python }}_torch{{ pytorch }}_cuda{{ cuda }}
+  # The following is be used to build with the system's CUDA Toolkit,
+  # if the nvidia::cuda* packages are used instead, then the next 2 lines
+  # should be commented out
+  script_env:
+    - CUDA_HOME=/usr/local/cuda
+  entry_points:
+    - torchani = torchani.cli:main
 
 requirements:
   build:
@@ -22,7 +33,7 @@ requirements:
     - pytorch::pytorch={{ pytorch }}
     - pytorch::pytorch-cuda={{ cuda }}
     # NOTE: This script assumes by default that the extensions are built using
-    # the system's CUDA Toolkit, if this is not possible then the 3 lines
+    # the system's CUDA Toolkit, if this is not possible then the next 3 lines
     # should be added.
     #- nvidia::cuda-libraries-dev={{ cuda }}
     #- nvidia::cuda-nvcc={{ cuda }}
@@ -35,15 +46,6 @@ requirements:
     - conda-forge::tqdm
     - pytorch::pytorch={{ pytorch }}
     - pytorch::pytorch-cuda={{ cuda }}
-
-build:
-  number: 0
-  string: py{{ python }}_torch{{ pytorch }}_cuda{{ cuda }}
-  # The following is be used to build with the system's CUDA Toolkit,
-  # if the nvidia::cuda* packages are used instead, then the next 2 lines
-  # should be commented out
-  script_env:
-    - CUDA_HOME=/usr/local/cuda
 
 test:
   # These are automatically added to the "run" requirements when testing
@@ -64,4 +66,4 @@ about:
   home: https://roitberg.chem.ufl.edu
   license: MIT
   license_file: LICENSE
-  summary: 'Roiberg Group Sandbox'
+  summary: Roiberg Group Sandbox
