--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: sandbox
-  version: {{ GIT_DESCRIBE_TAG }}.{{ GIT_BUILD_STR }}
+  version: {{ environ.get('GIT_DESCRIBE_TAG', '2.3') }}.{{ environ.get('GIT_BUILD_STR', 'dev') }}
 
 source:
   # git_url only captures committed code
