--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -17,24 +17,25 @@ build:
   entry_points:
     - torchani = torchani.cli:main
 
+#Specifying versions in the requrements.host section helps conda solve the env faster
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     # For source.git_url
-    - conda-forge::git
+    - conda-forge::git=2.34
   host:
     - conda-forge::python={{ python }}
-    - conda-forge::typing_extensions>=4.0.0
-    - conda-forge::cmake
-    - conda-forge::pip
-    - conda-forge::setuptools
-    - conda-forge::setuptools_scm
+    - conda-forge::typing_extensions=4.11
+    - conda-forge::cmake=3.29.3
+    - conda-forge::pip=24.0
+    - conda-forge::setuptools=69.5.1
+    - conda-forge::setuptools_scm=8.1.0
     - pytorch::pytorch={{ pytorch }}
     - pytorch::pytorch-cuda={{ cuda }}
     # NOTE: This script assumes by default that the extensions are built using
     # the system's CUDA Toolkit, if this is not possible then the next 3 lines
-    # should be added.
+    # should be added,
     #- nvidia::cuda-libraries-dev={{ cuda }}
     #- nvidia::cuda-nvcc={{ cuda }}
     #- nvidia::cuda-cccl={{ cuda }}
@@ -50,8 +51,8 @@ requirements:
 test:
   # These are automatically added to the "run" requirements when testing
   requires:
-    - conda-forge::parameterized
-    - conda-forge::expecttest
+    - conda-forge::parameterized=0.9.0
+    - conda-forge::expecttest=0.2.1
   source_files:
     - tests/*
     - dataset/*
