--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -9,21 +9,26 @@ source:
 build:
   number: 0
   string: py{{ python }}_torch{{ pytorch }}_cuda{{ cuda }}
-  # The following is be used to build with the system's CUDA Toolkit,
-  # if the nvidia::cuda* packages are used instead, then the next 2 lines
-  # should be commented out
-  script_env:
-    - CUDA_HOME=/usr/local/cuda
+  script: >-
+    "export CUDA_HOME=/usr/local/cuda
+    && {{ PYTHON }} -m pip install --no-deps --no-build-isolation -v .
+    && cd ./torchani/csrc
+    && cmake
+      -DTORCH_CUDA_ARCH_LIST='6.0;6.1;7.0;7.5;8.0;8.6'
+      -S./torchani/csrc
+      -B./torchani/csrc/build/
+    && cmake --build ./torchani/csrc/build
+    && cmake --install ./torchani/csrc/build"
   entry_points:
     - torchani = torchani.cli:main
 
-#Specifying versions in the requrements.host section helps conda solve the env faster
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     # For source.git_url
     - conda-forge::git=2.34
+  #Specifying versions in the host section helps conda solve env faster
   host:
     - conda-forge::python={{ python }}
     - conda-forge::typing_extensions=4.11
@@ -32,13 +37,6 @@ requirements:
     - conda-forge::setuptools=69.5.1
     - conda-forge::setuptools_scm=8.1.0
     - pytorch::pytorch={{ pytorch }}
-    - pytorch::pytorch-cuda={{ cuda }}
-    # NOTE: This script assumes by default that the extensions are built using
-    # the system's CUDA Toolkit, if this is not possible then the next 3 lines
-    # should be added,
-    #- nvidia::cuda-libraries-dev={{ cuda }}
-    #- nvidia::cuda-nvcc={{ cuda }}
-    #- nvidia::cuda-cccl={{ cuda }}
   run:
     - conda-forge::python={{ python }}
     - conda-forge::typing_extensions>=4.0.0
@@ -49,19 +47,8 @@ requirements:
     - pytorch::pytorch-cuda={{ cuda }}
 
 test:
-  # These are automatically added to the "run" requirements when testing
-  requires:
-    - conda-forge::parameterized=0.9.0
-    - conda-forge::expecttest=0.2.1
-  source_files:
-    - tests/*
-    - dataset/*
-    - download.sh
-  commands:
-    # Download test data
-    - ./download.sh
-    # Cuaev test only
-    - python tests/test_cuaev.py
+  imports:
+    - torchani
 
 about:
   home: https://roitberg.chem.ufl.edu
