--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -17,6 +17,7 @@ build:
       -DTORCH_CUDA_ARCH_LIST='6.0;6.1;7.0;7.5;8.0;8.6'
       -S./torchani/csrc
       -B./torchani/csrc/build/
+      -G Ninja
     && cmake --build ./torchani/csrc/build
     && cmake --install ./torchani/csrc/build"
   entry_points:
