Fix limit options

--- a/.github/workflows/build-conda-pkg.yml
+++ b/.github/workflows/build-conda-pkg.yml
@@ -23,11 +23,13 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           file: conda.Dockerfile
-          shm-size: 5g
-          ulimit: memlock=-1,stack=67108864
           push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          shm-size: 5g
+          ulimit:
+            - memlock=-1
+            - stack=67108864
 
       - name: Build pkg locally
         run: >-
