--- a/.github/workflows/unittests-ext.yml
+++ b/.github/workflows/unittests-ext.yml
@@ -22,10 +22,11 @@ jobs:
       - name: Build and push Docker image (with extensions)
         uses: docker/build-push-action@v5
         with:
-          push: false
-          build-args: BUILD_EXT=sm75
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            BUILD_EXT=sm75
+            BUILDKIT_CONTEXT_KEEP_GIT_DIR=1
 
       - name: Run extension GPU tests (Quadro RTX 5000, SM75)
         run: >-
