Fix build script

--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -12,9 +12,11 @@ build:
   script: >-
     "export CUDA_HOME=/usr/local/cuda
     && {{ PYTHON }} -m pip install --no-deps --no-build-isolation -v .
-    && cmake -DTORCH_CUDA_ARCH_LIST='6.0;6.1;7.0;7.5;8.0;8.6' -S./torchani/csrc/ -B./torchani/csrc/build/ -G Ninja
-    && cmake --build ./torchani/csrc/build
-    && cmake --install ./torchani/csrc/build"
+    && cd ./torchani/csrc/
+    && mkdir ./build
+    && cmake -DTORCH_CUDA_ARCH_LIST='6.0;6.1;7.0;7.5;8.0;8.6' -S. -B./build/ -G Ninja
+    && cmake --build ./build
+    && cmake --install ./build"
   entry_points:
     - torchani = torchani.cli:main
 
