Vast simplification of recipe

--- a/.github/workflows/build-conda-pkg.yml
+++ b/.github/workflows/build-conda-pkg.yml
@@ -43,7 +43,7 @@ jobs:
           bash -c "mkdir ./conda-pkgs/
           && source /opt/conda/etc/profile.d/conda.sh
           && conda activate
-          && conda build -c nvidia -c pytorch -c conda-forge --no-anaconda-upload --output-folder ./conda-pkgs/ ./conda/recipe"
+          && conda build -c nvidia -c pytorch -c conda-forge --no-anaconda-upload --output-folder ./conda-pkgs/ ./recipe"
 
       - name: Remove image
         if: ${{ always() }}
