--- a/.github/workflows/build-conda-pkg.yml
+++ b/.github/workflows/build-conda-pkg.yml
@@ -1,15 +1,20 @@
 name: conda
 
-on: pull_request
+# This workflow runs
+# - on pull_requests that contain the word 'conda' in the branch name
+# - on the default branch, at 00:00:00 every day
+on:
+  pull_request:
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   REGISTRY: ${{ github.repository }}
   IMAGE_NAME: 'conda-pkg'
 
-# This workflow only runs on pull_requests that start with 'conda/'
 jobs:
   build-pkg:
-    #if: ${{ startsWith(github.head_ref, 'conda/') || github.event_name == 'cron' }}
+    if: ${{ contains(github.head_ref, 'conda') || github.event_name == 'schedule' }}
     runs-on: [self-hosted, ipickering]
     permissions:
       contents: read
