--- a/.github/workflows/unittests-ext.yml
+++ b/.github/workflows/unittests-ext.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 env:
   REGISTRY: ${{ github.repository }}
-  IMAGE_NAME: 'unittests'
+  IMAGE_NAME: 'unittests-ext'
 
 jobs:
   gpu-tests-ext:
